<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity6">

    <EditText
        android:id="@+id/sqlite_editext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sender"
        android:layout_marginVertical="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:autofillHints="@string/buttonadd"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286"
        tools:ignore="LabelFor" />


    <Button
        android:id="@+id/btnadd"
        android:layout_width="125dp"
        android:layout_height="56dp"
        android:layout_marginTop="92dp"
        android:text="@string/buttonadd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sqlite_editext" />

    <Button
        android:id="@+id/btnViewData"
        android:layout_width="125dp"
        android:layout_height="56dp"
        android:layout_marginTop="92dp"
        android:text="@string/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sqlite_editext" />


</androidx.constraintlayout.widget.ConstraintLayout>